[package]
name = "warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1.0"
serde = "1.0.196"
rusoto_core = "0.46"
rusoto_dynamodb = "0.46"
dynamodb = "0.16"

[dev-dependencies]
cargo-watch = "7.8"

